JakShellParser.cpp

// Generated from JakShell.g4 by ANTLR 4.13.1


#include "JakShellListener.h"

#include "JakShellParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct JakShellParserStaticData final {
  JakShellParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  JakShellParserStaticData(const JakShellParserStaticData&) = delete;
  JakShellParserStaticData(JakShellParserStaticData&&) = delete;
  JakShellParserStaticData& operator=(const JakShellParserStaticData&) = delete;
  JakShellParserStaticData& operator=(JakShellParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag jakshellParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
JakShellParserStaticData *jakshellParserStaticData = nullptr;

void jakshellParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (jakshellParserStaticData != nullptr) {
    return;
  }
#else
  assert(jakshellParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<JakShellParserStaticData>(
    std::vector<std::string>{
      "command", "listFiles", "changeDirectory", "makeDirectory", "ifStatement", 
      "forLoop", "printText", "echoText", "removeFile", "copyFile", "moveFile", 
      "listProcesses", "killProcess", "executeCommand", "listUsers", "showDate", 
      "showTime", "createFile", "appendToFile", "condition", "commands"
    },
    std::vector<std::string>{
      "", "'ls'", "'cd'", "'mkdir'", "'if'", "'then'", "'else'", "'end'", 
      "'for'", "'in'", "'..'", "'do'", "'print'", "'echo'", "'rm'", "'cp'", 
      "'mv'", "'ps'", "'kill'", "'who'", "'date'", "'time'", "'touch'", 
      "'>>'", "'=='", "'!='", "'>'", "'<'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "ID", "STRING", "WS"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  jakshellParserStaticData = staticData.release();
}

}

JakShellParser::JakShellParser(TokenStream *input) : JakShellParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

JakShellParser::JakShellParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  JakShellParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *jakshellParserStaticData->atn, jakshellParserStaticData->decisionToDFA, jakshellParserStaticData->sharedContextCache, options);
}

JakShellParser::~JakShellParser() {
  delete _interpreter;
}

const atn::ATN& JakShellParser::getATN() const {
  return *jakshellParserStaticData->atn;
}

std::string JakShellParser::getGrammarFileName() const {
  return "JakShell.g4";
}

const std::vector<std::string>& JakShellParser::getRuleNames() const {
  return jakshellParserStaticData->ruleNames;
}

const dfa::Vocabulary& JakShellParser::getVocabulary() const {
  return jakshellParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView JakShellParser::getSerializedATN() const {
  return jakshellParserStaticData->serializedATN;
}


//----------------- CommandContext ------------------------------------------------------------------

JakShellParser::CommandContext::CommandContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

JakShellParser::ListFilesContext* JakShellParser::CommandContext::listFiles() {
  return getRuleContext<JakShellParser::ListFilesContext>(0);
}

JakShellParser::ChangeDirectoryContext* JakShellParser::CommandContext::changeDirectory() {
  return getRuleContext<JakShellParser::ChangeDirectoryContext>(0);
}

JakShellParser::MakeDirectoryContext* JakShellParser::CommandContext::makeDirectory() {
  return getRuleContext<JakShellParser::MakeDirectoryContext>(0);
}

JakShellParser::IfStatementContext* JakShellParser::CommandContext::ifStatement() {
  return getRuleContext<JakShellParser::IfStatementContext>(0);
}

JakShellParser::ForLoopContext* JakShellParser::CommandContext::forLoop() {
  return getRuleContext<JakShellParser::ForLoopContext>(0);
}

JakShellParser::PrintTextContext* JakShellParser::CommandContext::printText() {
  return getRuleContext<JakShellParser::PrintTextContext>(0);
}

JakShellParser::EchoTextContext* JakShellParser::CommandContext::echoText() {
  return getRuleContext<JakShellParser::EchoTextContext>(0);
}

JakShellParser::RemoveFileContext* JakShellParser::CommandContext::removeFile() {
  return getRuleContext<JakShellParser::RemoveFileContext>(0);
}

JakShellParser::CopyFileContext* JakShellParser::CommandContext::copyFile() {
  return getRuleContext<JakShellParser::CopyFileContext>(0);
}

JakShellParser::MoveFileContext* JakShellParser::CommandContext::moveFile() {
  return getRuleContext<JakShellParser::MoveFileContext>(0);
}

JakShellParser::ListProcessesContext* JakShellParser::CommandContext::listProcesses() {
  return getRuleContext<JakShellParser::ListProcessesContext>(0);
}

JakShellParser::KillProcessContext* JakShellParser::CommandContext::killProcess() {
  return getRuleContext<JakShellParser::KillProcessContext>(0);
}

JakShellParser::ExecuteCommandContext* JakShellParser::CommandContext::executeCommand() {
  return getRuleContext<JakShellParser::ExecuteCommandContext>(0);
}

JakShellParser::ListUsersContext* JakShellParser::CommandContext::listUsers() {
  return getRuleContext<JakShellParser::ListUsersContext>(0);
}

JakShellParser::ShowDateContext* JakShellParser::CommandContext::showDate() {
  return getRuleContext<JakShellParser::ShowDateContext>(0);
}

JakShellParser::ShowTimeContext* JakShellParser::CommandContext::showTime() {
  return getRuleContext<JakShellParser::ShowTimeContext>(0);
}

JakShellParser::CreateFileContext* JakShellParser::CommandContext::createFile() {
  return getRuleContext<JakShellParser::CreateFileContext>(0);
}

JakShellParser::AppendToFileContext* JakShellParser::CommandContext::appendToFile() {
  return getRuleContext<JakShellParser::AppendToFileContext>(0);
}


size_t JakShellParser::CommandContext::getRuleIndex() const {
  return JakShellParser::RuleCommand;
}

void JakShellParser::CommandContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JakShellListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCommand(this);
}

void JakShellParser::CommandContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JakShellListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCommand(this);
}

JakShellParser::CommandContext* JakShellParser::command() {
  CommandContext *_localctx = _tracker.createInstance<CommandContext>(_ctx, getState());
  enterRule(_localctx, 0, JakShellParser::RuleCommand);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(60);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(42);
      listFiles();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(43);
      changeDirectory();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(44);
      makeDirectory();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(45);
      ifStatement();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(46);
      forLoop();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(47);
      printText();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(48);
      echoText();
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(49);
      removeFile();
      break;
    }

    case 9: {
      enterOuterAlt(_localctx, 9);
      setState(50);
      copyFile();
      break;
    }

    case 10: {
      enterOuterAlt(_localctx, 10);
      setState(51);
      moveFile();
      break;
    }

    case 11: {
      enterOuterAlt(_localctx, 11);
      setState(52);
      listProcesses();
      break;
    }

    case 12: {
      enterOuterAlt(_localctx, 12);
      setState(53);
      killProcess();
      break;
    }

    case 13: {
      enterOuterAlt(_localctx, 13);
      setState(54);
      executeCommand();
      break;
    }

    case 14: {
      enterOuterAlt(_localctx, 14);
      setState(55);
      listUsers();
      break;
    }

    case 15: {
      enterOuterAlt(_localctx, 15);
      setState(56);
      showDate();
      break;
    }

    case 16: {
      enterOuterAlt(_localctx, 16);
      setState(57);
      showTime();
      break;
    }

    case 17: {
      enterOuterAlt(_localctx, 17);
      setState(58);
      createFile();
      break;
    }

    case 18: {
      enterOuterAlt(_localctx, 18);
      setState(59);
      appendToFile();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ListFilesContext ------------------------------------------------------------------

JakShellParser::ListFilesContext::ListFilesContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t JakShellParser::ListFilesContext::getRuleIndex() const {
  return JakShellParser::RuleListFiles;
}

void JakShellParser::ListFilesContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JakShellListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterListFiles(this);
}

void JakShellParser::ListFilesContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JakShellListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitListFiles(this);
}

JakShellParser::ListFilesContext* JakShellParser::listFiles() {
  ListFilesContext *_localctx = _tracker.createInstance<ListFilesContext>(_ctx, getState());
  enterRule(_localctx, 2, JakShellParser::RuleListFiles);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(62);
    match(JakShellParser::T__0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ChangeDirectoryContext ------------------------------------------------------------------

JakShellParser::ChangeDirectoryContext::ChangeDirectoryContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* JakShellParser::ChangeDirectoryContext::ID() {
  return getToken(JakShellParser::ID, 0);
}


size_t JakShellParser::ChangeDirectoryContext::getRuleIndex() const {
  return JakShellParser::RuleChangeDirectory;
}

void JakShellParser::ChangeDirectoryContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JakShellListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterChangeDirectory(this);
}

void JakShellParser::ChangeDirectoryContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JakShellListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitChangeDirectory(this);
}

JakShellParser::ChangeDirectoryContext* JakShellParser::changeDirectory() {
  ChangeDirectoryContext *_localctx = _tracker.createInstance<ChangeDirectoryContext>(_ctx, getState());
  enterRule(_localctx, 4, JakShellParser::RuleChangeDirectory);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(64);
    match(JakShellParser::T__1);
    setState(65);
    match(JakShellParser::ID);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MakeDirectoryContext ------------------------------------------------------------------

JakShellParser::MakeDirectoryContext::MakeDirectoryContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* JakShellParser::MakeDirectoryContext::ID() {
  return getToken(JakShellParser::ID, 0);
}


size_t JakShellParser::MakeDirectoryContext::getRuleIndex() const {
  return JakShellParser::RuleMakeDirectory;
}

void JakShellParser::MakeDirectoryContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JakShellListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMakeDirectory(this);
}

void JakShellParser::MakeDirectoryContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JakShellListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMakeDirectory(this);
}

JakShellParser::MakeDirectoryContext* JakShellParser::makeDirectory() {
  MakeDirectoryContext *_localctx = _tracker.createInstance<MakeDirectoryContext>(_ctx, getState());
  enterRule(_localctx, 6, JakShellParser::RuleMakeDirectory);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(67);
    match(JakShellParser::T__2);
    setState(68);
    match(JakShellParser::ID);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IfStatementContext ------------------------------------------------------------------

JakShellParser::IfStatementContext::IfStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

JakShellParser::ConditionContext* JakShellParser::IfStatementContext::condition() {
  return getRuleContext<JakShellParser::ConditionContext>(0);
}

std::vector<JakShellParser::CommandsContext *> JakShellParser::IfStatementContext::commands() {
  return getRuleContexts<JakShellParser::CommandsContext>();
}

JakShellParser::CommandsContext* JakShellParser::IfStatementContext::commands(size_t i) {
  return getRuleContext<JakShellParser::CommandsContext>(i);
}


size_t JakShellParser::IfStatementContext::getRuleIndex() const {
  return JakShellParser::RuleIfStatement;
}

void JakShellParser::IfStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JakShellListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIfStatement(this);
}

void JakShellParser::IfStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JakShellListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIfStatement(this);
}

JakShellParser::IfStatementContext* JakShellParser::ifStatement() {
  IfStatementContext *_localctx = _tracker.createInstance<IfStatementContext>(_ctx, getState());
  enterRule(_localctx, 8, JakShellParser::RuleIfStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(70);
    match(JakShellParser::T__3);
    setState(71);
    condition();
    setState(72);
    match(JakShellParser::T__4);
    setState(73);
    commands();
    setState(74);
    match(JakShellParser::T__5);
    setState(75);
    commands();
    setState(76);
    match(JakShellParser::T__6);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ForLoopContext ------------------------------------------------------------------

JakShellParser::ForLoopContext::ForLoopContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> JakShellParser::ForLoopContext::ID() {
  return getTokens(JakShellParser::ID);
}

tree::TerminalNode* JakShellParser::ForLoopContext::ID(size_t i) {
  return getToken(JakShellParser::ID, i);
}

JakShellParser::CommandsContext* JakShellParser::ForLoopContext::commands() {
  return getRuleContext<JakShellParser::CommandsContext>(0);
}


size_t JakShellParser::ForLoopContext::getRuleIndex() const {
  return JakShellParser::RuleForLoop;
}

void JakShellParser::ForLoopContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JakShellListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterForLoop(this);
}

void JakShellParser::ForLoopContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JakShellListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitForLoop(this);
}

JakShellParser::ForLoopContext* JakShellParser::forLoop() {
  ForLoopContext *_localctx = _tracker.createInstance<ForLoopContext>(_ctx, getState());
  enterRule(_localctx, 10, JakShellParser::RuleForLoop);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(78);
    match(JakShellParser::T__7);
    setState(79);
    match(JakShellParser::ID);
    setState(80);
    match(JakShellParser::T__8);
    setState(81);
    match(JakShellParser::ID);
    setState(82);
    match(JakShellParser::T__9);
    setState(83);
    match(JakShellParser::ID);
    setState(84);
    match(JakShellParser::T__10);
    setState(85);
    commands();
    setState(86);
    match(JakShellParser::T__6);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PrintTextContext ------------------------------------------------------------------

JakShellParser::PrintTextContext::PrintTextContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* JakShellParser::PrintTextContext::STRING() {
  return getToken(JakShellParser::STRING, 0);
}


size_t JakShellParser::PrintTextContext::getRuleIndex() const {
  return JakShellParser::RulePrintText;
}

void JakShellParser::PrintTextContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JakShellListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPrintText(this);
}

void JakShellParser::PrintTextContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JakShellListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPrintText(this);
}

JakShellParser::PrintTextContext* JakShellParser::printText() {
  PrintTextContext *_localctx = _tracker.createInstance<PrintTextContext>(_ctx, getState());
  enterRule(_localctx, 12, JakShellParser::RulePrintText);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(88);
    match(JakShellParser::T__11);
    setState(89);
    match(JakShellParser::STRING);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- EchoTextContext ------------------------------------------------------------------

JakShellParser::EchoTextContext::EchoTextContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* JakShellParser::EchoTextContext::STRING() {
  return getToken(JakShellParser::STRING, 0);
}


size_t JakShellParser::EchoTextContext::getRuleIndex() const {
  return JakShellParser::RuleEchoText;
}

void JakShellParser::EchoTextContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JakShellListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterEchoText(this);
}

void JakShellParser::EchoTextContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JakShellListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitEchoText(this);
}

JakShellParser::EchoTextContext* JakShellParser::echoText() {
  EchoTextContext *_localctx = _tracker.createInstance<EchoTextContext>(_ctx, getState());
  enterRule(_localctx, 14, JakShellParser::RuleEchoText);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(91);
    match(JakShellParser::T__12);
    setState(92);
    match(JakShellParser::STRING);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RemoveFileContext ------------------------------------------------------------------

JakShellParser::RemoveFileContext::RemoveFileContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* JakShellParser::RemoveFileContext::ID() {
  return getToken(JakShellParser::ID, 0);
}


size_t JakShellParser::RemoveFileContext::getRuleIndex() const {
  return JakShellParser::RuleRemoveFile;
}

void JakShellParser::RemoveFileContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JakShellListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRemoveFile(this);
}

void JakShellParser::RemoveFileContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JakShellListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRemoveFile(this);
}

JakShellParser::RemoveFileContext* JakShellParser::removeFile() {
  RemoveFileContext *_localctx = _tracker.createInstance<RemoveFileContext>(_ctx, getState());
  enterRule(_localctx, 16, JakShellParser::RuleRemoveFile);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(94);
    match(JakShellParser::T__13);
    setState(95);
    match(JakShellParser::ID);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CopyFileContext ------------------------------------------------------------------

JakShellParser::CopyFileContext::CopyFileContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> JakShellParser::CopyFileContext::ID() {
  return getTokens(JakShellParser::ID);
}

tree::TerminalNode* JakShellParser::CopyFileContext::ID(size_t i) {
  return getToken(JakShellParser::ID, i);
}


size_t JakShellParser::CopyFileContext::getRuleIndex() const {
  return JakShellParser::RuleCopyFile;
}

void JakShellParser::CopyFileContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JakShellListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCopyFile(this);
}

void JakShellParser::CopyFileContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JakShellListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCopyFile(this);
}

JakShellParser::CopyFileContext* JakShellParser::copyFile() {
  CopyFileContext *_localctx = _tracker.createInstance<CopyFileContext>(_ctx, getState());
  enterRule(_localctx, 18, JakShellParser::RuleCopyFile);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(97);
    match(JakShellParser::T__14);
    setState(98);
    match(JakShellParser::ID);
    setState(99);
    match(JakShellParser::ID);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MoveFileContext ------------------------------------------------------------------

JakShellParser::MoveFileContext::MoveFileContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> JakShellParser::MoveFileContext::ID() {
  return getTokens(JakShellParser::ID);
}

tree::TerminalNode* JakShellParser::MoveFileContext::ID(size_t i) {
  return getToken(JakShellParser::ID, i);
}


size_t JakShellParser::MoveFileContext::getRuleIndex() const {
  return JakShellParser::RuleMoveFile;
}

void JakShellParser::MoveFileContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JakShellListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMoveFile(this);
}

void JakShellParser::MoveFileContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JakShellListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMoveFile(this);
}

JakShellParser::MoveFileContext* JakShellParser::moveFile() {
  MoveFileContext *_localctx = _tracker.createInstance<MoveFileContext>(_ctx, getState());
  enterRule(_localctx, 20, JakShellParser::RuleMoveFile);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(101);
    match(JakShellParser::T__15);
    setState(102);
    match(JakShellParser::ID);
    setState(103);
    match(JakShellParser::ID);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ListProcessesContext ------------------------------------------------------------------

JakShellParser::ListProcessesContext::ListProcessesContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t JakShellParser::ListProcessesContext::getRuleIndex() const {
  return JakShellParser::RuleListProcesses;
}

void JakShellParser::ListProcessesContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JakShellListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterListProcesses(this);
}

void JakShellParser::ListProcessesContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JakShellListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitListProcesses(this);
}

JakShellParser::ListProcessesContext* JakShellParser::listProcesses() {
  ListProcessesContext *_localctx = _tracker.createInstance<ListProcessesContext>(_ctx, getState());
  enterRule(_localctx, 22, JakShellParser::RuleListProcesses);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(105);
    match(JakShellParser::T__16);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- KillProcessContext ------------------------------------------------------------------

JakShellParser::KillProcessContext::KillProcessContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* JakShellParser::KillProcessContext::ID() {
  return getToken(JakShellParser::ID, 0);
}


size_t JakShellParser::KillProcessContext::getRuleIndex() const {
  return JakShellParser::RuleKillProcess;
}

void JakShellParser::KillProcessContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JakShellListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterKillProcess(this);
}

void JakShellParser::KillProcessContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<JakShellListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitKillProcess(this);
}

JakShellParser::KillProcessContext* JakShellParser::killProcess() {
  KillProcessContext *_localctx = _tracker.createInstance<KillProcessContext>(_ctx, getState());
  enterRule(_localctx, 24, JakShellParser::RuleKillProcess);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(107);
    match(JakShellParser::T__17);
    setState(108);
    match(JakShellParser::ID);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExecuteCommandContext ------------------------------------------------------------------

JakShellParser::ExecuteCommandContext::ExecuteCommandContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> JakShellParser::ExecuteCommandContext::ID() {
  return getTokens(JakShellParser::ID);
}

tree::TerminalNode* JakShellParser::ExecuteCommandContext::ID(size_t i) {
  return getToken(JakShellParser::ID, i);
}

std::vector<tree::TerminalNode *> JakShellParser::ExecuteCommandContext::STRING() {
  return getTokens(JakShellParser::STRING);
}

tree::TerminalNode* JakShellParser::ExecuteCommandContext::STRING(size_t i) {
  return getToken(JakShellParser::STRING, i);
}


size_t JakShellParser::ExecuteCommandContext::getRuleIndex() const {
  return JakShellParser::RuleExecuteCommand;
}
